--- a/pom.xml
+++ b/pom.xml
@@ -113,7 +113,7 @@
                     </docletArtifact>
                 </configuration>
             </plugin>
+			    <finalName>mon-app</finalName>
 		</plugins>
 	</build>
-
 </project>
