--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,6 @@ spring.jpa.properties.hibernate.format_sql=true
 jwt.secret=mysuperlongsecretkeywithatleast32chars!
 
 logging.level.org.springframework.security=DEBUG
-spring.data.mongodb.uri=mongodb+srv://sluu160593:Programmation16!@cluster0.votfsul.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+spring.data.mongodb.uri=mongodb+srv://sluu160593:Programmation16!@cluster0.votfsul.mongodb.net/mydb?retryWrites=true&w=majority&appName=Cluster0
 spring.data.mongodb.database=mydb
 cors.allowed.origin=http://localhost:4200
