--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.username=postgres
 spring.datasource.password=Programmation16!
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# === Configuration JPA / Hibernate ===
+# === Configuration JPA / Hibernate spring.data.mongodb.database=mydb ===
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -16,5 +16,4 @@ jwt.secret=mysuperlongsecretkeywithatleast32chars!
 
 logging.level.org.springframework.security=DEBUG
 spring.data.mongodb.uri=mongodb+srv://sluu160593:Programmation16!@cluster0.votfsul.mongodb.net/mydb?retryWrites=true&w=majority&appName=Cluster0
-spring.data.mongodb.database=mydb
 cors.allowed.origin=http://localhost:4200
