--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.username=postgres
 spring.datasource.password=Programmation16!
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# === Configuration JPA / Hibernate spring.data.mongodb.database=mydb ===
+# === Configuration JPA / Hibernate  ===
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -15,5 +15,6 @@ spring.jpa.properties.hibernate.format_sql=true
 jwt.secret=mysuperlongsecretkeywithatleast32chars!
 
 logging.level.org.springframework.security=DEBUG
-spring.data.mongodb.uri=mongodb+srv://sluu160593:Programmation16%21@cluster0.votfsul.mongodb.net/mydb?retryWrites=true&w=majority&appName=Cluster0
-cors.allowed.origin=http://localhost:4200
+spring.data.mongodb.uri=mongodb+srv://sluu160593:Programmation16!@cluster0.votfsul.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+spring.data.mongodb.database=mydb
+cors.allowed.origin=todooliste.netlify.app
