--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,4 +17,4 @@ jwt.secret=mysuperlongsecretkeywithatleast32chars!
 logging.level.org.springframework.security=DEBUG
 spring.data.mongodb.uri=mongodb+srv://sluu160593:Programmation16!@cluster0.votfsul.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 spring.data.mongodb.database=mydb
-cors.allowed.origin=todooliste.netlify.app
+cors.allowed.origin=https://todooliste.netlify.app
